[project]
name = "aiobp"
version = "0.5.0"
description = "Boilerplate for asyncio service"
authors = [
    {name = "INSOFT s.r.o.", email = "helpdesk@insoft.cz"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.2",
    "msgspec>=0.19.0",
    "mypy>=1.15.0",
    "pyyaml>=6.0.2",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D107", "D400", "D415", "FA100", "D101", "D102"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.uv]
package = true
dev-dependencies = [
]
